plugins {
    id 'application'
}

group = 'uk.gemwire'
archivesBaseName = 'installerconverter'
version = '0.1'

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.2'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.11.2'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
    implementation group: 'com.google.jimfs', name: 'jimfs', version: '1.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

application {
    mainClassName = 'uk.gemwire.installerconverter.Main'
    applicationDefaultJvmArgs += ["--enable-preview"]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(15)
    }
}

// Enable preview features, so we can have records and such

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

test {
    useJUnitPlatform()
}